force-app/main/default/objects/Attendee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>IF(ISBLANK( Contact__r.Account.ShippingAddress ), 
&apos;&apos;,
Contact__r.Account.ShippingStreet + &apos;, &apos; 
+ Contact__r.Account.ShippingCity + &apos;, &apos; 
+ Contact__r.Account.ShippingState + &apos;, &apos;
+ Contact__r.Account.ShippingPostalCode + &apos;, &apos;
+ Contact__r.Account.ShippingCountry
)</formula>
    <label>Contact&apos;s Account Shipping Address</label>
    <type>Text</type>
</CustomField>