force-app/main/default/objects/Attendee__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Contact__r.Account.Owner.FirstName + &apos; &apos; + Contact__r.Account.Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>