force-app/main/default/objects/Attendee__c/fields/Attendee_Number__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Number__c</fullName>
    <displayFormat>A-{00000}</displayFormat>
    <label>Attendee Number</label>
    <type>AutoNumber</type>
</CustomField>