force-app/main/default/objects/Attendee__c/fields/Certificate_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Card_Expiration_Date__c</fullName>
    <description>Indicates the date of expiration for the certificate/card via formula.</description>
    <formula>if ( or(isblank(Certificate_Length__c), Certificate_Length__c&lt;=0), null, 

if (isblank(Completion_Date__c),
null,

IF(
  AND(
    MONTH((Completion_Date__c) ) = 2,
    DAY((Completion_Date__c) ) = 29,
    NOT( 
      OR( 
        MOD( YEAR((Completion_Date__c) ) + Service_Appointment__r.Product__r.Certificate_Length__c, 400 ) = 0, 
        AND( 
          MOD( YEAR((Completion_Date__c) ) + Service_Appointment__r.Product__r.Certificate_Length__c, 4 ) = 0,
          MOD( YEAR((Completion_Date__c) ) + Service_Appointment__r.Product__r.Certificate_Length__c, 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR((Completion_Date__c) ) + Service_Appointment__r.Product__r.Certificate_Length__c, 3, 1),
  DATE( YEAR((Completion_Date__c) ) + Service_Appointment__r.Product__r.Certificate_Length__c, MONTH((Completion_Date__c) ), DAY((Completion_Date__c) ) )
)

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the date of expiration for the certificate/card.</inlineHelpText>
    <label>Certificate/Card Expiration Date</label>
    <type>Date</type>
</CustomField>