force-app/main/default/objects/Attendee__c/fields/Certificate_Length__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Length__c</fullName>
    <formula>Service_Appointment__r.Product__r.Certificate_Length__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>