force-app/main/default/objects/Attendee__c/fields/Certificate_Status__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Status__c</fullName>
    <description>Captures the status of the Attendee&apos;s certification.</description>
    <inlineHelpText>Indicates the status of the Attendee&apos;s certification.</inlineHelpText>
    <label>Certificate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Certificate Created</fullName>
            </value>
            <value>
                <fullName>Certificate Printed</fullName>
            </value>
            <value>
                <fullName>Mailed Out</fullName>
            </value>
            <value>
                <fullName>E-Mailed Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>