force-app/main/default/objects/Attendee__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>