force-app/main/default/objects/Attendee__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <description>Captures whether the Course Attendee has been confirmed or not Defaults to &quot;No&quot; until the order is booked.</description>
    <inlineHelpText>Indicates whether the Course Attendee has been confirmed or not defaults to &quot;No&quot; until the order is booked.</inlineHelpText>
    <label>Confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No - Rescheduled</fullName>
                <isActive>false</isActive>
                <label>No - Rescheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>