force-app/main/default/objects/Attendee__c/fields/Consent_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Consent_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if the digital consent form was sent. Replaces standard MoL paperwork</description>
    <label>Consent Form Sent</label>
    <type>Checkbox</type>
</CustomField>