force-app/main/default/objects/Attendee__c/fields/Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attendees (Contact Account)</relationshipLabel>
    <relationshipName>Attendees1_del</relationshipName>
    <type>Lookup</type>
</CustomField>