force-app/main/default/objects/Attendee__c/fields/Contact_Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Contact_Is_Valid__c</fullName>
    <formula>OR(

and(
not(isblank(Quote_Line__c)),
isblank(Order_Product__c),
not(isblank(Contact__c)),
Quote_Line__r.Account__c = Contact__r.AccountId
),

and(
not(isblank(Quote_Account__c)),
not(isblank(Contact__c)),
Quote_Account__c = Contact__r.AccountId
),

and (
not(isblank(Order_Product__c)),
not(isblank(Contact__c)),
Order_Product__r.Order.AccountId  =  Contact__r.AccountId
),

and(
not(isblank(Contact__c)),
isblank(Order_Product__c),
isblank(Quote_Line__c),
Service_Appointment__r.Account__c = Contact__r.AccountId
),

and(
not(isblank(Contact__c)),
not(isblank(OsgOnline_Id__c))
),


ISPICKVAL(Status__c, &apos;Canceled&apos;) 
)</formula>
    <label>Contact Is Valid</label>
    <type>Checkbox</type>
</CustomField>