force-app/main/default/objects/Attendee__c/fields/Contact_s_Account_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Account_Client_ID__c</fullName>
    <formula>IF(
ISBLANK(Contact__c),
&apos;&apos;,
Contact__r.Account.Client_ID__c + &quot;: &quot; + Contact__r.Account.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Account &amp; Client ID</label>
    <type>Text</type>
</CustomField>