force-app/main/default/objects/Attendee__c/fields/Contact_s_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Account_Name__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Account Name</label>
    <type>Text</type>
</CustomField>