force-app/main/default/objects/Attendee__c/fields/Contact_s_Account_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Account_Primary_Contact__c</fullName>
    <formula>Contact__r.Account.Primary_Contact__r.FirstName + &apos; &apos; +  Contact__r.Account.Primary_Contact__r.LastName</formula>
    <label>Contact&apos;s Account Primary Contact</label>
    <type>Text</type>
</CustomField>