force-app/main/default/objects/Attendee__c/fields/Contact_s_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Client_ID__c</fullName>
    <formula>Contact__r.Account.Client_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&apos;s Client ID</label>
    <type>Text</type>
</CustomField>