force-app/main/default/objects/Attendee__c/fields/Count_of_Completed_Evaluations__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Completed_Evaluations__c</fullName>
    <description>Count of Completed Evaluation Records.</description>
    <inlineHelpText>Count of Completed Evaluation Records.</inlineHelpText>
    <label>Count of Passed Evaluations</label>
    <summaryFilterItems>
        <field>Evaluation__c.Status__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>Evaluation__c.Attendee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>