force-app/main/default/objects/Attendee__c/fields/Course_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Course_Product_Line__c</fullName>
    <label>Course Product Line</label>
    <length>128</length>
    <type>Text</type>
</CustomField>