force-app/main/default/objects/Attendee__c/fields/Digital_JHSC_Wallet_Card_Sent__c.field-meta.xml
<CustomField>
    <fullName>Digital_JHSC_Wallet_Card_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines if attendee was sent a temporary digital JHSC wallet card (automatically sent if checked in after 2020/11/16)</inlineHelpText>
    <label>Digital JHSC Wallet Card Sent</label>
    <type>Checkbox</type>
</CustomField>