force-app/main/default/objects/Attendee__c/fields/Digital_TTT_Material_Sent__c.field-meta.xml
<CustomField>
    <fullName>Digital_TTT_Material_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the participant manual and leader guide pdfs were sent to the attendee</inlineHelpText>
    <label>Digital TTT Material Sent</label>
    <type>Checkbox</type>
</CustomField>