force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>if (isblank(Contact__r.Email),

 
if (isblank(  Order_Product__r.Order.Primary_Contact__r.Email ),
 Contact__r.Account.Primary_Contact_Email__c 
,

  Order_Product__r.Order.Primary_Contact__r.Email )

,


Contact__r.Email)</formula>
    <label>Notification Email</label>
    <type>Text</type>
</CustomField>