force-app/main/default/objects/Attendee__c/fields/Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Evaluated__c</fullName>
    <description>Captures if the Attendee has been evaluated.</description>
    <formula>IF(
Count_of_Completed_Evaluations__c &gt; 0,
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Attendee has been evaluated.</inlineHelpText>
    <label>Evaluation Passed</label>
    <type>Checkbox</type>
</CustomField>