force-app/main/default/objects/Attendee__c/fields/force_ru_update__c.field-meta.xml
<CustomField>
    <fullName>force_ru_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>force_ru_update</label>
    <type>Checkbox</type>
</CustomField>