force-app/main/default/objects/Attendee__c/fields/Force_Send_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>Force_Send_Consent_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Send Consent Form</label>
    <type>Checkbox</type>
</CustomField>