force-app/main/default/objects/Attendee__c/fields/Identity_Verification_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verification_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identity Verification Form Sent</label>
    <type>Checkbox</type>
</CustomField>