force-app/main/default/objects/Attendee__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>if (Contact__c = &apos;0038Z00002wEyIz&apos;,&apos;&apos;,Contact__r.LastName)</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>