force-app/main/default/objects/Attendee__c/fields/LMS_Module_Position__c.field-meta.xml
<CustomField>
    <fullName>LMS_Module_Position__c</fullName>
    <description>Stores the position in LMS course attendee is at</description>
    <label>LMS Module Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>