force-app/main/default/objects/Attendee__c/fields/Number_of_Covid_Questionnaires__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Covid_Questionnaires__c</fullName>
    <label>Number of Covid Questionnaires</label>
    <summaryFilterItems>
        <field>Attendee_Questionnaire__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Covid</value>
    </summaryFilterItems>
    <summaryForeignKey>Attendee_Questionnaire__c.Attendee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>