force-app/main/default/objects/Attendee__c/fields/Online_Training__c.field-meta.xml
<CustomField>
    <fullName>Online_Training__c</fullName>
    <description>Captures if the Attendee took the theory course online.</description>
    <inlineHelpText>Indicates if the Attendee took the theory course online.</inlineHelpText>
    <label>Online Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>