force-app/main/default/objects/Attendee__c/fields/Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner__c</fullName>
    <formula>Order_Product__r.Sales_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Owner</label>
    <type>Text</type>
</CustomField>