force-app/main/default/objects/Attendee__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects to Order Product record once Quote Line is booked.</description>
    <inlineHelpText>Connects to Order Product record once Quote Line is booked.</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>