force-app/main/default/objects/Attendee__c/fields/Order_Product_Account__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Account__c</fullName>
    <formula>Order_Product__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Account</label>
    <type>Text</type>
</CustomField>