force-app/main/default/objects/Attendee__c/fields/Order_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Status__c</fullName>
    <description>Captures Order Product&apos;s Activation Status.</description>
    <formula>TEXT(Order_Product__r.SBQQ__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product Status</label>
    <type>Text</type>
</CustomField>