force-app/main/default/objects/Attendee__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Order_Product__r.Product2.External_Product_Name__c</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>