force-app/main/default/objects/Attendee__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>IF( 
 NOT(ISBLANK(Order_Product__c)),
 Order_Product__r.Product2.ProductCode,
 IF(
  NOT(ISBLANK(Service_Appointment__c)),
  Service_Appointment__r.Product__r.ProductCode,
  &apos;&apos;
 )
)</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>