force-app/main/default/objects/Attendee__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Contains the name of product linked to service appointment</description>
    <inlineHelpText>Contains the name of product linked to service appointment</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>