force-app/main/default/objects/Attendee__c/fields/Quote_Line_Account__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Account__c</fullName>
    <formula>Quote_Line__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Account</label>
    <type>Text</type>
</CustomField>