force-app/main/default/objects/Attendee__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <length>128</length>
    <type>Text</type>
</CustomField>