force-app/main/default/objects/Attendee__c/fields/Requires_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>Requires_Consent_Form__c</fullName>
    <formula>AND(
 Service_Appointment__r.Has_SkillsPass_Key__c = true,
 Service_Appointment__r.SchedEndTime &gt;  DATETIMEVALUE(&apos;2020-06-16 12:00:00&apos;),
 Order_Product_Status__c != &apos;Canceled&apos;,
 Order_Product_Status__c != &apos;Canceled - Invoice&apos;
)</formula>
    <label>Requires Consent Form</label>
    <type>Checkbox</type>
</CustomField>