force-app/main/default/objects/Attendee__c/fields/Requires_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Evaluation__c</fullName>
    <formula>Service_Appointment__r.Product__r.Requires_Evaluation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Evaluation</label>
    <type>Checkbox</type>
</CustomField>