force-app/main/default/objects/Attendee__c/fields/Requires_Wall_Cert__c.field-meta.xml
<CustomField>
    <fullName>Requires_Wall_Cert__c</fullName>
    <formula>text(  Service_Appointment__r.Product__r.Wall_Certificate__c ) = &apos;Yes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Wall Cert</label>
    <type>Checkbox</type>
</CustomField>