force-app/main/default/objects/Attendee__c/fields/Requires_Wallet_Card__c.field-meta.xml
<CustomField>
    <fullName>Requires_Wallet_Card__c</fullName>
    <formula>text(  Service_Appointment__r.Product__r.Wallet_Card__c ) = &apos;Yes&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Wallet Card</label>
    <type>Checkbox</type>
</CustomField>