force-app/main/default/objects/Attendee__c/fields/RU_Cert_Exp_In_Future__c.field-meta.xml
<CustomField>
    <fullName>RU_Cert_Exp_In_Future__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RU Cert Exp In Future</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>