force-app/main/default/objects/Attendee__c/fields/RU_Cert_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>RU_Cert_Expiration_Date__c</fullName>
    <label>RU Cert Expiration Date</label>
    <type>Date</type>
</CustomField>