force-app/main/default/objects/Attendee__c/fields/RU_Scheduled_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RU_Scheduled_Start_Date__c</fullName>
    <label>RU Scheduled Start Date</label>
    <type>Date</type>
</CustomField>