force-app/main/default/objects/Attendee__c/fields/SA__c.field-meta.xml
<CustomField>
    <fullName>SA__c</fullName>
    <formula>Service_Appointment__r.Order_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Order Product</label>
    <type>Text</type>
</CustomField>