force-app/main/default/objects/Attendee__c/fields/SA_Account__c.field-meta.xml
<CustomField>
    <fullName>SA_Account__c</fullName>
    <formula>Service_Appointment__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Account</label>
    <type>Text</type>
</CustomField>