force-app/main/default/objects/Attendee__c/fields/SA_IH3POS__c.field-meta.xml
<CustomField>
    <fullName>SA_IH3POS__c</fullName>
    <formula>TEXT( Service_Appointment__r.IH3POS__c )</formula>
    <label>SA IH3POS</label>
    <type>Text</type>
</CustomField>