force-app/main/default/objects/Attendee__c/fields/SA_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>SA_Product_Family__c</fullName>
    <formula>Service_Appointment__r.Product_Family__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Product Family</label>
    <type>Text</type>
</CustomField>