force-app/main/default/objects/Attendee__c/fields/SA_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>SA_Product_Name__c</fullName>
    <formula>Service_Appointment__r.Product_Card_Cert_Title__c</formula>
    <label>SA Product Name</label>
    <type>Text</type>
</CustomField>