force-app/main/default/objects/Attendee__c/fields/SA_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>SA_Quote_Line__c</fullName>
    <formula>Service_Appointment__r.Quote_Line__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Quote Line</label>
    <type>Text</type>
</CustomField>