force-app/main/default/objects/Attendee__c/fields/SA_Requires_Final_Test__c.field-meta.xml
<CustomField>
    <fullName>SA_Requires_Final_Test__c</fullName>
    <formula>Service_Appointment__r.Product__r.Requires_Final_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Requires Final Test</label>
    <type>Checkbox</type>
</CustomField>