force-app/main/default/objects/Attendee__c/fields/SA_Status__c.field-meta.xml
<CustomField>
    <fullName>SA_Status__c</fullName>
    <formula>Text(Service_Appointment__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Status</label>
    <type>Text</type>
</CustomField>