force-app/main/default/objects/Attendee__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>If(
OR(
NOT(ISBLANK( UUID__c )),
ISPICKVAL( Theory_Status__c, &quot;Passed&quot; )
),
&quot;Cannot delete this attendee!&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>