force-app/main/default/objects/Attendee__c/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <formula>datetimevalue(Service_Appointment__r.SchedEndTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>