force-app/main/default/objects/Attendee__c/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <description>Captures Scheduled Start of Service Appointment</description>
    <formula>/*datetimevalue(if (isblank( Service_Appointment__c), Quote_Line__r.Scheduled_Date_and_Time__c, Service_Appointment__r.SchedStartTime))*/
datetimevalue(Service_Appointment__r.SchedStartTime)</formula>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>