force-app/main/default/objects/Attendee__c/fields/Send_Result__c.field-meta.xml
<CustomField>
    <fullName>Send_Result__c</fullName>
    <label>Send Result</label>
    <length>128</length>
    <type>Text</type>
</CustomField>