force-app/main/default/objects/Attendee__c/fields/ShipStation_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>ShipStation_Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShipStation Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>