force-app/main/default/objects/Attendee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Captures the Status of the Attendee. Set to &quot;Confirmed&quot; upon checking in.</description>
    <inlineHelpText>Indicates the Status of the Attendee. Set to &quot;Confirmed&quot; upon checking in.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended Entire Course</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Show up for 2nd or 3rd Day</fullName>
            </value>
            <value>
                <fullName>Equipment Unavailable</fullName>
            </value>
            <value>
                <fullName>Left Course</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Canceled - Invoice</fullName>
                <isActive>false</isActive>
                <label>Canceled - Invoice</label>
            </value>
            <value>
                <fullName>Confirmed - Walk-In</fullName>
                <isActive>false</isActive>
                <label>Confirmed - Walk-In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>