force-app/main/default/objects/Attendee__c/fields/Theory_Exam_Results__c.field-meta.xml
<CustomField>
    <fullName>Theory_Exam_Results__c</fullName>
    <label>Final Test Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>