force-app/main/default/objects/Attendee__c/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <label>Training Completed</label>
    <type>Date</type>
</CustomField>