force-app/main/default/objects/Attendee__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Stores a v4 UUID that is used for SkillsPass syncing</description>
    <label>UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>