force-app/main/default/objects/Attendee__c/fields/Wallet_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Card_Status__c</fullName>
    <label>Wallet Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Card Printed</fullName>
            </value>
            <value>
                <fullName>Mailed Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>