force-app/main/default/objects/Attendee__c/validationRules/Cannot_Change_UUID.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_UUID</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( UUID__c ),
 NOT(ISBLANK(PRIORVALUE( UUID__c ))),
 $User.Id != &apos;00546000000ufVc&apos;
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the UUID! Contact your administrator.</errorMessage>
</ValidationRule>