force-app/main/default/objects/Attendee__c/validationRules/DL2_Attendee_In_Bundle.validationRule-meta.xml
<ValidationRule>
    <fullName>DL2_Attendee_In_Bundle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Order_Product__r.SBQQ__RequiredBy__r.Product2.ProductCode = &apos;OL-JHSCI&apos;,
 $Profile.Name!= &apos;OSG Sys Admin&apos;,
 OR(
 ISPICKVAL( Status__c, &apos;Canceled&apos;),
 ISPICKVAL( Status__c, &apos;Canceled - Invoice&apos;) 
 )
)</errorConditionFormula>
    <errorMessage>Cannot cancel attendee DL2 in bundle! Contact your admin or create a JHSC Bundle Accounting Request.</errorMessage>
</ValidationRule>